# template_observer

./: CMakeLists.txt  Observer.h  README  Subject.h  test_observer.cpp
